plugins {
    id 'java'
    id 'idea'
    id 'org.kordamp.gradle.jandex'
}

// dependencies-resolvement
repositories {
    mavenCentral()
    mavenLocal()
}

group 'org.fk'
version '1.0.0-SNAPSHOT'

// java-settings for the whole project
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}
test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}
compileJava {
    options.encoding = "UTF-8"
    options.compilerArgs << "-parameters"
}
compileTestJava {
    options.encoding = "UTF-8"
}

// idea-settings for the whole project
idea {
    project {
        jdkName = '21'
        languageLevel = '21'
        vcs = 'Git'
    }
}
